# Calculator

./: CMakeLists.txt
include/: calculator.h  lexema.h  polynom.h
src/: main.cpp
